[gd_scene load_steps=3 format=3 uid="uid://r6ea3hb2mck0"]

[ext_resource type="Script" path="res://Assets/GUI/Settings/Settings.gd" id="1_l876p"]
[ext_resource type="Theme" uid="uid://bj2q0bvxlmix" path="res://Assets/GUI/Fonts/BombahBrosTheme.tres" id="1_mkcon"]

[node name="Settings" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_mkcon")
script = ExtResource("1_l876p")

[node name="PanelContainer" type="PanelContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 48.0
offset_top = 21.0
offset_right = -48.0
offset_bottom = -21.0
grow_horizontal = 2
grow_vertical = 2

[node name="TabContainer" type="TabContainer" parent="PanelContainer"]
layout_mode = 2

[node name="User" type="TabBar" parent="PanelContainer/TabContainer"]
layout_mode = 2

[node name="ScrollContainer" type="ScrollContainer" parent="PanelContainer/TabContainer/User"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 28.0
offset_top = 34.0
offset_right = -28.0
offset_bottom = -21.0
grow_horizontal = 2
grow_vertical = 2

[node name="MarginContainer" type="MarginContainer" parent="PanelContainer/TabContainer/User/ScrollContainer"]
layout_mode = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 15
theme_override_constants/margin_right = 10

[node name="GridContainer" type="GridContainer" parent="PanelContainer/TabContainer/User/ScrollContainer/MarginContainer"]
layout_mode = 2
theme_override_constants/h_separation = 50
theme_override_constants/v_separation = 15
columns = 2

[node name="UsernameLabel" type="Label" parent="PanelContainer/TabContainer/User/ScrollContainer/MarginContainer/GridContainer"]
layout_mode = 2
text = "Username"

[node name="UsernameLineEdit" type="LineEdit" parent="PanelContainer/TabContainer/User/ScrollContainer/MarginContainer/GridContainer"]
custom_minimum_size = Vector2(200, 0)
layout_mode = 2
placeholder_text = "Enter new username"
caret_blink = true
caret_blink_interval = 0.5

[node name="AvatarLabel" type="Label" parent="PanelContainer/TabContainer/User/ScrollContainer/MarginContainer/GridContainer"]
layout_mode = 2
text = "Avatar URL"

[node name="AvatarLineEdit" type="LineEdit" parent="PanelContainer/TabContainer/User/ScrollContainer/MarginContainer/GridContainer"]
layout_mode = 2
placeholder_text = "Enter new avatar URL"
caret_blink = true
caret_blink_interval = 0.5

[node name="WarningLabel" type="Label" parent="PanelContainer/TabContainer/User"]
modulate = Color(1, 0, 0, 1)
layout_mode = 2
offset_left = 16.0
offset_top = 13.0
offset_right = 410.0
offset_bottom = 32.0
text = "* You must restart the game to update these settings!"

[node name="Video" type="TabBar" parent="PanelContainer/TabContainer"]
visible = false
layout_mode = 2

[node name="ScrollContainer" type="ScrollContainer" parent="PanelContainer/TabContainer/Video"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 28.0
offset_top = 20.0
offset_right = -28.0
offset_bottom = -21.0
grow_horizontal = 2
grow_vertical = 2

[node name="MarginContainer" type="MarginContainer" parent="PanelContainer/TabContainer/Video/ScrollContainer"]
layout_mode = 2
theme_override_constants/margin_top = 15

[node name="GridContainer" type="GridContainer" parent="PanelContainer/TabContainer/Video/ScrollContainer/MarginContainer"]
layout_mode = 2
theme_override_constants/h_separation = 50
theme_override_constants/v_separation = 15
columns = 2

[node name="Audio" type="TabBar" parent="PanelContainer/TabContainer"]
visible = false
layout_mode = 2

[node name="ScrollContainer" type="ScrollContainer" parent="PanelContainer/TabContainer/Audio"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 28.0
offset_top = 20.0
offset_right = -28.0
offset_bottom = -21.0
grow_horizontal = 2
grow_vertical = 2

[node name="MarginContainer" type="MarginContainer" parent="PanelContainer/TabContainer/Audio/ScrollContainer"]
layout_mode = 2
theme_override_constants/margin_top = 15

[node name="GridContainer" type="GridContainer" parent="PanelContainer/TabContainer/Audio/ScrollContainer/MarginContainer"]
layout_mode = 2
theme_override_constants/h_separation = 50
theme_override_constants/v_separation = 15
columns = 2

[node name="Gameplay" type="TabBar" parent="PanelContainer/TabContainer"]
visible = false
layout_mode = 2

[node name="ScrollContainer" type="ScrollContainer" parent="PanelContainer/TabContainer/Gameplay"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="MarginContainer" type="MarginContainer" parent="PanelContainer/TabContainer/Gameplay/ScrollContainer"]
layout_mode = 2
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 25

[node name="GridContainer" type="GridContainer" parent="PanelContainer/TabContainer/Gameplay/ScrollContainer/MarginContainer"]
layout_mode = 2
theme_override_constants/h_separation = 50
theme_override_constants/v_separation = 15

[node name="CheckBox" type="CheckBox" parent="PanelContainer/TabContainer/Gameplay/ScrollContainer/MarginContainer/GridContainer"]
layout_mode = 2
text = "Enable W to Jump"

[node name="MarginContainer" type="MarginContainer" parent="PanelContainer"]
layout_mode = 2
size_flags_horizontal = 8
size_flags_vertical = 8
theme_override_constants/margin_right = 50
theme_override_constants/margin_bottom = 20

[node name="SaveButton" type="Button" parent="PanelContainer/MarginContainer"]
layout_mode = 2
text = "Save & Exit"

[connection signal="pressed" from="PanelContainer/MarginContainer/SaveButton" to="." method="_on_save_button_pressed"]
